# First-Project

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/handlers/: auth.rs  items.rs  mod.rs  users.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  user.rs
backend/src/routes/: mod.rs
